--- a/Views/OrderPage.xaml
+++ b/Views/OrderPage.xaml
@@ -114,7 +114,7 @@
 
                             <Button Content="{DynamicResource Order_BtnPayOrder}" Width="200"
                                 Style="{DynamicResource PrimaryButtonStyle}"
-                                Margin="0,12,0,6">
+                                Margin="0,12,0,6" Click="Btn_OrderPay">
                                 <Button.Tag>/Resources/Icons/orders-icon.png</Button.Tag>
                             </Button>
 
