- MessageDialog added - ConnectionUtilities added - PersonalPage added - RegisterEmployee added

--- a/App.xaml
+++ b/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Properties/MergedResources.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/UIElementals.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/Animations.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/DataGridStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/ButtonsStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/IconsStyles.xaml"/>
