--- a/Resources/Styles/TextBoxStyles.xaml
+++ b/Resources/Styles/TextBoxStyles.xaml
@@ -6,7 +6,7 @@
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
         <Setter Property="Height" Value="46"/>
-        <Setter Property="FontFamily" Value="SF Pro Display"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Padding" Value="6,3"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -42,6 +42,58 @@
 
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter TargetName="TextBoxBorder" Property="Opacity" Value="0.5"/>
+                            <Setter Property="Foreground" Value="{StaticResource SecondaryBrush}"/>
+                            <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="BorderBrush" Value="#808080"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style x:Key="PasswordBoxStyle" TargetType="PasswordBox">
+        <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
+        <Setter Property="Height" Value="46"/>
+        <Setter Property="FontFamily" Value="{StaticResource SFProRegular}"/>
+        <Setter Property="FontSize" Value="12"/>
+        <Setter Property="Padding" Value="6,3"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="#D3D1DB"/>
+        <Setter Property="Foreground" Value="{StaticResource PrimaryBrush}"/>
+        <Setter Property="PasswordChar" Value="•"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="PasswordBox">
+                    <Border x:Name="PasswordBoxBorder"
+                    Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="12"
+                    Padding="5">
+                        <Grid>
+                            <TextBlock Text="{TemplateBinding Tag}" 
+                               Foreground="{StaticResource SecondaryBrush}"
+                               FontSize="10"
+                               FontWeight="SemiBold"
+                               VerticalAlignment="Top"
+                               Margin="8,2,5,0"/>
+                            <ScrollViewer x:Name="PART_ContentHost"
+                                  VerticalAlignment="Bottom"
+                                  Margin="0,12,0,0"/>
+                        </Grid>
+                    </Border>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="True">
+                            <Setter TargetName="PasswordBoxBorder" Property="BorderBrush" Value="{StaticResource PrimaryButtonBrush}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="PasswordBoxBorder" Property="Opacity" Value="0.5"/>
                             <Setter Property="Foreground" Value="{StaticResource SecondaryBrush}"/>
                             <Setter Property="Background" Value="{StaticResource SecondaryButtonBrush}"/>
                         </Trigger>
@@ -157,11 +209,11 @@
                                         </ToggleButton.FocusVisualStyle>
 
                                         <Path Data="M 4,6 L 8,10 L 12,6"
-                                          Stroke="{StaticResource SecondaryBrush}"
-                                          StrokeThickness="1.5"
-                                          StrokeLineJoin="Round"
-                                          StrokeStartLineCap="Round"
-                                          StrokeEndLineCap="Round"/>
+                                              Stroke="{StaticResource SecondaryBrush}"
+                                              StrokeThickness="1.5"
+                                              StrokeLineJoin="Round"
+                                              StrokeStartLineCap="Round"
+                                              StrokeEndLineCap="Round"/>
                                     </ToggleButton>
 
                                     <ContentPresenter x:Name="ContentPresenter"
