--- a/Resources/Styles/UIElementals.xaml
+++ b/Resources/Styles/UIElementals.xaml
@@ -1,22 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Tipografías utilizadas -->
-    <FontFamily x:Key="SFProRegular">pack://application:,,,/Resources/Fonts/#SF Pro Display</FontFamily>
-    <FontFamily x:Key="SFProMedium">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProSemiBold">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProBold">pack://application:,,,/Resources/Fonts/#SF Pro Display Bold</FontFamily>
-    <FontFamily x:Key="SFProItalic">pack://application:,,,/Resources/Fonts/#SF Pro Display Italic</FontFamily>
+    <FontFamily x:Key="SFProRegular">/Resources/Fonts/#SF Pro Display</FontFamily>
+    <FontFamily x:Key="SFProMedium">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProSemiBold">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProBold">/Resources/Fonts/#SF Pro Display Bold</FontFamily>
+    <FontFamily x:Key="SFProItalic">/Resources/Fonts/#SF Pro Display Italic</FontFamily>
 
     <!-- Definición de colores -->
     <Color x:Key="BackgroundColor">#F4F4FA</Color>
     <Color x:Key="PrimaryColor">#2D2C32</Color>
     <Color x:Key="SecondaryColor">#7E7B8D</Color>
     <Color x:Key="BorderColor">#D3D1DB</Color>
-    <Color x:Key="PrimaryButtonColor">#E23A10</Color>
-    <Color x:Key="PrimaryButtonHoverColor">#E54E28</Color>
+    <Color x:Key="DangerColor">#FF1654</Color>
+    <Color x:Key="SuccessColor">#00AB64</Color>
+    <Color x:Key="WarningColor">#F3BB19</Color>
+    <Color x:Key="PrimaryButtonColor">#1E52CB</Color>
+    <Color x:Key="PrimaryButtonHoverColor">#2B60DA</Color>
     <Color x:Key="SecondaryButtonColor">#EFEDF7</Color>
     <Color x:Key="SecondaryButtonHoverColor">#F0EDFC</Color>
-    <Color x:Key="DangerButtonColor">#FF312E</Color>
     
     <!-- Brochas basadas en los colores -->
     <SolidColorBrush x:Key="BackgroundBrush" Color="{StaticResource BackgroundColor}"/>
@@ -27,5 +29,7 @@
     <SolidColorBrush x:Key="PrimaryButtonHoverBrush" Color="{StaticResource PrimaryButtonHoverColor}"/>
     <SolidColorBrush x:Key="SecondaryButtonBrush" Color="{StaticResource SecondaryButtonColor}"/>
     <SolidColorBrush x:Key="SecondaryButtonHoverBrush" Color="{StaticResource SecondaryButtonHoverColor}"/>
-    <SolidColorBrush x:Key="DangerButtonBrush" Color="{StaticResource DangerButtonColor}"/>
+    <SolidColorBrush x:Key="SuccessBrush" Color="{StaticResource SuccessColor}"/>
+    <SolidColorBrush x:Key="WarningBrush" Color="{StaticResource WarningColor}"/>
+    <SolidColorBrush x:Key="DangerBrush" Color="{StaticResource DangerColor}"/>
 </ResourceDictionary>
