--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -6,93 +6,107 @@
         xmlns:local="clr-namespace:ItaliaPizzaClient.Views"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" 
-        Height="720" 
+        Title="MainWindow"
+        Height="720"
         Width="1080" MinWidth="920">
     <Border Background="{StaticResource BackgroundBrush}" CornerRadius="12">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="230"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-
-            <Border Grid.Column="0" Background="#EDEDFE" 
-                BorderBrush="{StaticResource SecondaryBrush}" 
-                BorderThickness="0.5,0">
+        <Grid x:Name="RootGrid">
+            <Border x:Name="DialogContener">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="64"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="230"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                    <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
-                        <StackPanel Orientation="Horizontal" Margin="16,0,0,0">
-                            <Image Source="/Resources/Icons/italiapizza-icon.png" 
-                       Width="36" Height="36" RenderOptions.BitmapScalingMode="HighQuality"/>
-                        </StackPanel>
-                    </Border>
-
-                    <Border Grid.Row="1">
+                    <Border Grid.Column="0" Background="#EDEDFE" 
+                            BorderBrush="{StaticResource SecondaryBrush}" 
+                            BorderThickness="0.5,0">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="64"/>
                                 <RowDefinition Height="*"/>
-                                <RowDefinition Height="84"/>
                             </Grid.RowDefinitions>
-                            <Border Grid.Row="0" Margin="18,0">
-                                <TextBox Style="{DynamicResource PrimarySearchBoxStyle}"/>
+
+                            <Border Grid.Row="0" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0,0,0.5">
+                                <StackPanel Orientation="Horizontal" Margin="16,0,0,0">
+                                    <Image Source="/Resources/Icons/italiapizza-icon.png"
+                                           Width="36" Height="36" RenderOptions.BitmapScalingMode="HighQuality"/>
+                                </StackPanel>
                             </Border>
 
-                            <StackPanel Grid.Row="1" x:Name="MenuStackPanel" Orientation="Vertical" Margin="14,4"/>
+                            <Border Grid.Row="1">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="64"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="84"/>
+                                    </Grid.RowDefinitions>
 
-                            <StackPanel Grid.Row="2" Orientation="Vertical">
-                                <Border Margin="14,8">
-                                    <Button x:Name="BtnProfile" Style="{DynamicResource ProfileButtonStyle}"/>
-                                </Border>
-                                <Border BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
-                                    <StackPanel Orientation="Horizontal" Margin="16,8">
-                                        <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
-                                               Style="{DynamicResource RegularLabelStyle}"
-                                               FontWeight="Medium" Margin="0,0,6,0"/>
-                                        <TextBlock Text="{DynamicResource Glb_Version}"
-                                               Style="{DynamicResource DescriptionLabelStyle}"/>
+                                    <Border Grid.Row="0" Margin="18,0">
+                                        <TextBox Style="{DynamicResource PrimarySearchBoxStyle}"/>
+                                    </Border>
+
+                                    <StackPanel Grid.Row="1" x:Name="MenuStackPanel" Orientation="Vertical" Margin="14,4"/>
+
+                                    <StackPanel Grid.Row="2" Orientation="Vertical">
+                                        <Border Margin="14,8">
+                                            <Button x:Name="BtnProfile" Style="{DynamicResource ProfileButtonStyle}"/>
+                                        </Border>
+                                        <Border BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
+                                            <StackPanel Orientation="Horizontal" Margin="16,8">
+                                                <TextBlock Text="{DynamicResource Glb_ItaliaPizza}"
+                                                           Style="{DynamicResource RegularLabelStyle}"
+                                                           FontWeight="Medium" Margin="0,0,6,0"/>
+                                                <TextBlock Text="{DynamicResource Glb_Version}"
+                                                           Style="{DynamicResource DescriptionLabelStyle}"/>
+                                            </StackPanel>
+                                        </Border>
                                     </StackPanel>
-                                </Border>
-                            </StackPanel>
+                                </Grid>
+                            </Border>
                         </Grid>
+                    </Border>
 
+                    <Border Grid.Column="1">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="42"/>
+                                <RowDefinition Height="30"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Grid Grid.Row="0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="20,0" Width="Auto" HorizontalAlignment="Left">
+                                    <Button x:Name="BtnBack" Style="{DynamicResource BackButtonStyle}"/>
+                                </StackPanel>
+                            </Grid>
+
+                            <Border Grid.Row="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
+                                <StackPanel x:Name="NavigationPanel" Orientation="Horizontal"
+                                            VerticalAlignment="Bottom" Margin="20,0"/>
+                            </Border>
+
+                            <Border Grid.Row="2" ClipToBounds="True">
+                                <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
+                            </Border>
+                        </Grid>
                     </Border>
                 </Grid>
             </Border>
 
-            <Border Grid.Column="1">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="42"/>
-                        <RowDefinition Height="30"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
-
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-
-                        <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="20,0" Width="Auto" HorizontalAlignment="Left">
-                            <Button x:Name="BtnBack" Style="{DynamicResource BackButtonStyle}"/>
-                        </StackPanel>
-                    </Grid>
-
-                    <Border Grid.Row="1" BorderBrush="{StaticResource SecondaryBrush}" BorderThickness="0,0.5,0,0">
-                        <StackPanel x:Name="NavigationPanel" Orientation="Horizontal"
-                                    VerticalAlignment="Bottom" Margin="20,0"/>
-                    </Border>
-
-                    <Border Grid.Row="2" ClipToBounds="True">
-                        <Frame Name="MainFrame" NavigationUIVisibility="Hidden"/>
-                    </Border>
-                </Grid>
+            <Border x:Name="DialogOverlay"
+                    Background="#80000000"
+                    Visibility="Collapsed"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Stretch">
+                <ContentControl x:Name="DialogHost"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"/>
             </Border>
         </Grid>
     </Border>
