--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -121,5 +121,6 @@
     <sys:String x:Key="RegOrderSupplier_Desc">Ingresa los datos de la orden que se desea registrar.</sys:String>
     <sys:String x:Key="RegOrderSupplier_Info">Informacion de la Orden.</sys:String>
     <sys:String x:Key="OrderSupplier_BtnNewOrden">Tramitar Orden</sys:String>
-    <sys:String x:Key="OrderSupplier_BtnCancelar">Cancelar Orden</sys:String>
+    <sys:String x:Key="OrderSupplier_BtnDeleteSupply">Eliminar Insumo</sys:String>
+    <sys:String x:Key="OrderSupplier_AddSupply">Agregar Insumo</sys:String>
 </ResourceDictionary>
