--- a/Views/RegisterCustomerPage.xaml
+++ b/Views/RegisterCustomerPage.xaml
@@ -22,24 +22,40 @@
             <TextBlock Style="{StaticResource DescriptionLabelStyle}" Text="{DynamicResource RegCustomer_Desc}"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="20, 20, 20, 0">
-            <StackPanel Orientation="Vertical">
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_Name}"
-                 Width="200" Margin="0, 10"/>
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_LastName}"
-                 Width="200" />
-                <TextBox Grid.Column="0" Margin="0, 10" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_PhoneNumber}"
-                Width="200" />
-                <TextBox Grid.Column="0" Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_Address}"
-                Width="200"/>
+        <Grid Grid.Row="1" Margin="15" Background="{StaticResource BackgroundBrush}">
+            <Grid.RowDefinitions>
+                    <RowDefinition Height="3*"/>
+                    <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+                
+                <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.Column="0">
+                <TextBlock Text="{DynamicResource RegCustomer_PersonalData}" Style="{StaticResource RegularLabelStyle}"/>
+                
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_Name}" Width="200" Margin="0, 10"/>
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_LastName}" Width="200" Margin="0, 10"/>
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_PhoneNumber}" Width="200" Margin="0, 10"/>
+            
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="30, 30, 30, 30">
-                <Button Style="{DynamicResource SecondaryButtonStyle}" Content="{DynamicResource Glb_BtnCancel}" Margin="10"
-                        Click="BtnCancelRegister"/>
-                <Button Style="{DynamicResource PrimaryButtonStyle}" Content="{DynamicResource Glb_BtnSave}"
-                        Click="BtnSaveCustomer"/>
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Grid.Column="1">
+                <TextBlock Text="{DynamicResource RegCustomer_AddressData}" Style="{StaticResource RegularLabelStyle}"/>
+
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_AddressName}" Width="200" Margin="0, 10"/>
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_AddressZipCode}" Width="200" Margin="0, 10"/>
+                <TextBox Style="{StaticResource TextBoxStyle}" Tag="{DynamicResource RegCustomer_AddressDistrict}" Width="200" Margin="0, 10"/>
+
             </StackPanel>
-        </StackPanel>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1">
+                <Button Style="{DynamicResource SecondaryButtonStyle}" Content="{DynamicResource Glb_BtnCancel}" Click="BtnCancelRegister"/>
+                <Button Style="{DynamicResource PrimaryButtonStyle}" Content="{DynamicResource Glb_BtnSave}" Click="BtnSaveCustomer" Margin="25"/>
+            </StackPanel>
+            
+        </Grid>
     </Grid>
 </Page>
