--- a/Properties/Strings.es-MX.xaml
+++ b/Properties/Strings.es-MX.xaml
@@ -163,4 +163,22 @@
     <sys:String x:Key="RegOrderSupplier_Info">Informacion de la Orden.</sys:String>
     <sys:String x:Key="OrderSupplier_BtnNewOrden">Tramitar Orden</sys:String>
     <sys:String x:Key="OrderSupplier_BtnCancelar">Cancelar Orden</sys:String>
+    
+    <!--Recipes-->
+    <sys:String x:Key="Recipes_Header">Recetas</sys:String>
+    <sys:String x:Key="Recipes_Desc">Visualiza, registra, modifica y elimina recetas utilizadas por Italia Pizza.</sys:String>
+    <sys:String x:Key="Recipes_BtnNewRecipe">Nueva Receta</sys:String>
+    <sys:String x:Key="Recipes_TitleTable">Lista de Recetas</sys:String>
+    <sys:String x:Key="Recipes_BtnDeleteRecipe">Eliminar receta</sys:String>
+    <sys:String x:Key="Recipes_BtnEditRecipe">Editar receta</sys:String>
+    <sys:String x:Key="Recipes_BtnAddRecipe">Agregar receta</sys:String>
+    
+    <!--Register Recipe-->
+    <sys:String x:Key="RegRecipe_Header">Registrar Receta</sys:String>
+    <sys:String x:Key="RegRecipe_Desc">Ingresa los datos de la receta que se desea registrar.</sys:String>
+    <sys:String x:Key="RegRecipe_RecipeInfo">Información de la Receta</sys:String>
+    <sys:String x:Key="RegRecipe_TbRecipeName">Nombre de la receta</sys:String>
+    <sys:String x:Key="RegRecipe_TbRecipeDescription">Descripción de la receta</sys:String>
+    <sys:String x:Key="RegRecipe_TbSupplyList">Lista de insumos</sys:String>
+
 </ResourceDictionary>
